Fixed misaligned botton logo

--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,8 @@ footer span a:hover{
 }
 
 footer img{
-    margin-top: 25px;
+    margin: 0 auto;
+    margin-bottom: 10px;
     height: 80px;
     width: auto;
 }
